# phoxi_camera

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  install_prerequisities.sh  package.xml
cfg/: pho_driver.cfg  phoxi_camera.cfg
launch/: phoxi_camera.launch  phoxi_camera_test.launch
msg/: FloatImage.msg
src/: phoxi_camera_example.py  phoxi_camera_node.cpp
srv/: GetFrame.srv  GetHardwareIdentification.srv  GetSupportedCapturingModes.srv  IsAcquiring.srv  SaveFrame.srv  TriggerImage.srv
