<?xml version="1.0"?>
<package>
  <name>phoxi_camera</name>
  <version>1.1.4</version>
  <description>The phoxi_camera is a package that enables interfacing Photoneo Phoxi Scanner/Camera from ROS</description>

  <author>Matej Sladek</author>
  <author>Filip Sladek</author>

  <maintainer email="msladek@photoneo.com">Matej Sladek</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/phoxi_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>
